--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -1,5 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
-{% block head %}
+
+{% block javascripts %}
 <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/decks.js') }}"></script>
@@ -16,8 +17,6 @@ var Identity = null,
 {% endblock %}
 
 {% block body %}
-
-{% if decks|length %}
 
 <div class="container decks">
 
@@ -165,402 +164,16 @@ var Identity = null,
 	<div id="dateupdate"></div>
 </div><!-- /#deck -->
 
-{% else %}
-
-<div class="jumbotron" id="no-deck-available">
-  <div class="container">
-    <h1>What, no deck?</h1>
-    <p>Decks are awesome. You can <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-pencil"></span> Edit</span> them until you're satisfied,
-    	then <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-share"></span> Publish</span> them for others to discuss.
-    	And if you want to keep to yourself, you can still <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-download"></span> Download</span> them,
-    	<span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-export"></span> Export</span> them
-    	or even <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-envelope"></span> Email</span> them.</p>
-    <p>So what are you waiting for? To create your first deck, you can either <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-plus"></span> Build</span> one from scratch using the Deckbuilder,
-    	<span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-import"></span> Import</span> one from the web,
-    	or <span class="fake-inline-button text-primary"><span class="glyphicon glyphicon-upload"></span> Upload</span> a deck file in Octgn or simple text format.</p>
-  </div>
-</div>
-<div style="text-align:center">
-		<a href="{{ path('deck_buildform', {side_text:'corp'}) }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-plus color-corp"></span> Build Corp</a>
-		<a href="{{ path('deck_buildform', {side_text:'runner'}) }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-plus color-runner"></span> Build Runner</a>
-		<a href="{{ path('deck_import') }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-import"></span> Import</a>
-		<button type="button" class="btn btn-default btn-lg" onclick="$('#fileModal').modal('show')"><span class="glyphicon glyphicon-upload"></span> Upload</button>
-		<button type="button" class="btn btn-default btn-lg" onclick="$('#archiveModal').modal('show')"><span class="glyphicon glyphicon-upload"></span> Upload archive</a>
-</div>
-
-{% endif %}
-
-<!-- Modal -->
-<div class="modal fade" id="fileModal" tabindex="-1" role="dialog" aria-labelledby="fileModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="fileModalLabel">Upload deck file</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('deck_fileimport') }}" method="POST" enctype="multipart/form-data">
-							<div class="form-group">
-								<label for="upfile">File</label>
-								<input class="form-control" type="file" id="upfile" name="upfile">
-							</div>
-							<div class="form-group">
-								<label for="type">File type</label>
-								<select class="form-control" id="type" name="type"><option value="auto">auto</option><option value="octgn">OCTGN</option><option value="text">Text</option></select>
-							</div>
-							<div class="pull-right">
-								<button type="submit" class="btn btn-success">Upload</button>
-								<button type="button" class="btn btn-default" onclick="$('#fileModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="deleteModalLabel">Delete deck</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('deck_delete') }}" method="POST" enctype="application/x-www-form-urlencoded" id="delete-deck-form">
-							<input type="hidden" name="deck_id" id="delete-deck-id" value="">
-							<p>
-							Are you sure that you want to delete the deck <b id="delete-deck-name"></b>?
-							</p>
-							<div class="pull-right">
-								<button type="submit" class="btn btn-danger">Yes, delete</button>
-								<button type="button" class="btn btn-default" onclick="$('#deleteModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="deleteListModal" tabindex="-1" role="dialog" aria-labelledby="deleteListModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="deleteListModalLabel">Delete decks</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('deck_delete_list') }}" method="POST" enctype="application/x-www-form-urlencoded" id="delete-deck-list-form">
-							<input type="hidden" name="ids" id="delete-deck-list-id" value="">
-							<p>
-							Are you sure that you want to delete all the decks selected?
-							</p>
-							<div class="pull-right">
-								<button type="submit" class="btn btn-danger">Yes, delete</button>
-								<button type="button" class="btn btn-default" onclick="$('#deleteListModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="publishModal" tabindex="-1" role="dialog" aria-labelledby="publishModalLabel" aria-hidden="true" data-backdrop="static">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="publishModalLabel">Publish decklist</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('decklist_new') }}" method="POST" enctype="application/x-www-form-urlencoded" id="publish-deck-form">
-							<input type="hidden" name="deck_id" id="publish-deck-id" value="">
-							<div class="form-group">
-								<label for="publish-deck-name">Name</label>
-								<input type="text" class="form-control decklist-name" name="name" id="publish-deck-name" maxlength="60" placeholder="Enter a name for this decklist">
-							</div>
-							<div class="form-group">
-								<label for="publish-deck-description">Description</label>
-								<textarea class="form-control" name="description" id="publish-deck-description" rows="5" placeholder="Enter a brief explanation of the deck strategy and your significant choices"></textarea>
-							</div>
-							<div class="form-group">
-								<label for="edit-decklist-tournament">Placed high in a tournament</label>
-								<select class="form-control" name="tournament" id="edit-decklist-tournament">
-								<option value="">No</option>
-								{% for tournament in tournaments %}
-								<option value="{{ tournament.id }}">{{ tournament.description }}</option>
-								{% endfor %}
-								</select>
-							</div>
-							<div class="pull-right">
-								<button type="submit" id="btn-publish-submit" class="btn btn-success">Checking...</button>
-								<button type="button" class="btn btn-default" onclick="$('#publishModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="exportModal" tabindex="-1" role="dialog" aria-labelledby="exportModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="modal-title" id="exportModalLabel">Export deck</h3>
-            </div>
-		    <div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<textarea class="form-control" id="export-deck" rows="20"></textarea>
-						</div>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal" id="oddsModal" tabindex="-1" role="dialog" aria-labelledby="oddsModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="modal-title" id="oddsModalLabel">Odds Calculator</h3>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-sm-12">
-						<form class="form-horizontal" role="form">
-						    <div class="form-group">
-						        <label for="odds-calculator-N" class="col-xs-7 control-label">Number of cards in deck</label>
-						        <div class="col-xs-2">
-						            <input type="number" class="form-control" id="odds-calculator-N" value="0">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="odds-calculator-K" class="col-xs-7 control-label">Number of <em>desired</em> cards in deck</label>
-								<div class="col-xs-2">
-									<input type="number" class="form-control" id="odds-calculator-K" value="0">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="odds-calculator-n" class="col-xs-7 control-label">Number of cards drawn</label>
-								<div class="col-xs-2">
-									<input type="number" class="form-control" id="odds-calculator-n" value="0">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="odds-calculator-k" class="col-xs-7 control-label">Number of <em>desired</em> cards in draw (at least)</label>
-								<div class="col-xs-2">
-									<input type="number" class="form-control" id="odds-calculator-k" value="0">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-xs-7 control-label">Probability of such an outcome</label>
-								<div class="col-xs-2">
-									 <p class="form-control-static"><span id="odds-calculator-p"></span>%</p>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="meteorModal" tabindex="-1" role="dialog" aria-labelledby="meteorModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="meteorModalLabel">Import from Meteor Decks</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('deck_meteorimport') }}" method="POST" enctype="application/x-www-form-urlencoded">
-							<div class="form-group">
-								<label for="urlmeteor">URL of the page "Your decks" on Meteor Decks</label>
-								<input class="form-control" type="text" id="urlmeteor" name="urlmeteor" placeholder="http://netrunner.meteor.com/users/xxxxxxxxxxxxxxxxx">
-							</div>
-							<div class="pull-right">
-								<button type="submit" class="btn btn-success">Import</button>
-								<button type="button" class="btn btn-default" onclick="$('#meteorModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="tagAddModal" tabindex="-1" role="dialog" aria-labelledby="tagAddModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="tagAddModalLabel">Add one or more tags</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form>
-						<div class="form-group">
-							<label for="tag_add_tags">Please enter the list of tags, separated by spaces</label>
-							<input class="form-control" type="text" name="tags" id="tag_add_tags" placeholder="a-tag another">
-						</div>
-						<div class="pull-right">
-							<input type="hidden" name="ids" id="tag_add_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagAddModal').modal('hide');tag_add_process(event)">Add</button>
-							<button type="button" class="btn btn-default" onclick="$('#tagAddModal').modal('hide')">Cancel</button>
-						</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="tagRemoveModal" tabindex="-1" role="dialog" aria-labelledby="tagRemoveModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="tagRemoveModalLabel">Delete one or more tags</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form>
-						<div class="form-group">
-							<label for="tag_remove_tags">Please enter the list of tags you want to remove, separated by spaces</label>
-							<input class="form-control" type="text" name="tags" id="tag_remove_tags" placeholder="a-tag another">
-						</div>
-						<div class="pull-right">
-							<input type="hidden" name="ids" id="tag_remove_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagRemoveModal').modal('hide');tag_remove_process(event)">Remove</button>
-							<button type="button" class="btn btn-default" onclick="$('#tagRemoveModal').modal('hide')">Cancel</button>
-						</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="tagClearModal" tabindex="-1" role="dialog" aria-labelledby="tagClearModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="tagClearModalLabel">Clear all tags</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form>
-						<div class="form-group">
-							<label>Are you sure you want to clear all tags from the selected decks?</label>
-						</div>
-						<div class="pull-right">
-							<input type="hidden" name="ids" id="tag_clear_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagClearModal').modal('hide');tag_clear_process(event)">Yes, clear</button>
-							<button type="button" class="btn btn-default" onclick="$('#tagClearModal').modal('hide')">Cancel</button>
-						</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="diffModal" tabindex="-1" role="dialog" aria-labelledby="diffModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="diffModalLabel">Decks comparison</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12" id="diff_content">
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="archiveModal" tabindex="-1" role="dialog" aria-labelledby="archiveModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 class="modal-title" id="archiveModalLabel">Upload deck archive</h3>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="col-md-12">
-						<form action="{{ path('decks_upload_all') }}" method="POST" enctype="multipart/form-data">
-							<div class="form-group">
-								<label for="uparchive">File</label>
-								<input class="form-control" type="file" id="uparchive" name="uparchive">
-							</div>
-							<div class="pull-right">
-								<button type="submit" class="btn btn-success">Upload</button>
-								<button type="button" class="btn btn-default" onclick="$('#archiveModal').modal('hide')">Cancel</button>
-							</div>
-						</form>
-					</div><!-- /#modal-info -->
-				</div><!-- /.row -->
-			</div><!-- /.modal-body -->
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-<!-- Modal -->
+{% include 'AppBundle:Modale:file.html.twig' %}
+{% include 'AppBundle:Modale:delete.html.twig' %}
+{% include 'AppBundle:Modale:delete_list.html.twig' %}
+{% include 'AppBundle:Modale:publish.html.twig' %}
+{% include 'AppBundle:Modale:export.html.twig' %}
+{% include 'AppBundle:Modale:odds.html.twig' %}
+{% include 'AppBundle:Modale:tag_add.html.twig' %}
+{% include 'AppBundle:Modale:tag_remove.html.twig' %}
+{% include 'AppBundle:Modale:tag_clear.html.twig' %}
+{% include 'AppBundle:Modale:diff.html.twig' %}
+{% include 'AppBundle:Modale:archive.html.twig' %}
 
 {% endblock %}
