--- a/src/AppBundle/Resources/views/Builder/directimport.html.twig
+++ b/src/AppBundle/Resources/views/Builder/directimport.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block head %}
+{% block javascripts %}
 
 <script src="{{ asset('/bundles/app/js/directimport.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/app.fuzzy_search.js') }}"></script>
