--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block head %}
+{% block javascript %}
 <script src="{{ asset('/bundles/app/js/search.js') }}"></script>
 <script type="text/javascript">
 $(function () {
