--- a/src/AppBundle/Resources/views/Builder/deck.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deck.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block head %}
+{% block javascripts %}
 
 <script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
