--- a/src/AppBundle/Resources/views/Builder/initbuild.html.twig
+++ b/src/AppBundle/Resources/views/Builder/initbuild.html.twig
@@ -4,30 +4,17 @@
 
 <div class="container">
 
-<div class="row">
+<h1>Choose your faction</h1>
 
-<div class="col-sm-8">
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><b>Choose your identity</b></div>
-  <!-- List group -->
-<div class="list-group">
-{% for identity in identities %}
-<a href="{{ path('deck_initbuild', {card_code:identity.code}) }}" class="list-group-item" data-code="{{ identity.code }}">
-	<span class="icon icon-{{ identity.faction.code }} {{ identity.faction.code }}"></span>
-	<span>{{ identity.name }}</span> <span class="small">({{ identity.pack.name }})</span>
-</a>
+<div class="row">
+{% for faction in factions %}
+	<div class="col-md-3 col-sm-4 col-xs-6">
+		<a href="{{ path('deck_initbuild', {faction_code:faction.code}) }}">
+			<img src="{{ asset('bundles/app/images/factions/' ~ faction.code ~ '.png') }}" class="img-responsive">
+		</a>
+	</div>
 {% endfor %}
 </div>
-</div>
-</div>
-<div id="initIdentity" class="col-sm-4 hidden-xs">
-<img src="#empty" class="img-responsive" id="cardimg" alt="Identity">
-</div>
-
-</div>
-
-
 
 </div>
 
