--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -1,7 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block hexagon %}{{ decklist.faction_code }}{% endblock %}
-{% block head %}
+{% block javascripts %}
 <script src="{{ asset('/bundles/app/js/app.draw_simulator.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script>
 <script src="{{ asset('/bundles/app/js/decklist.js') }}"></script>
