--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block head %}
+{% block javascript %}
 <script src="{{ asset('/bundles/netrunnerdbcards/js/reviews.js') }}"></script>
 {% endblock %}
 
