--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -154,7 +154,7 @@
     </script>
 	{% if app.environment == 'prod' %}
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		{% include 'appbundle::google-analytics.html.twig' %}
+		{% include 'AppBundle::google-analytics.html.twig' %}
 	{% endif %}
 	<script src="{{ asset('/bundles/app/js/app.data.js') }}"></script>
 	<script src="{{ asset('/bundles/app/js/app.format.js') }}"></script>
