--- a/src/AppBundle/Resources/views/Faction/faction.html.twig
+++ b/src/AppBundle/Resources/views/Faction/faction.html.twig
@@ -19,7 +19,7 @@
 
 <div class="row">
 <div class="col-md-3">
-<a href="{{ path('cards_zoom',{card_code:item['identity'].code}) }}" class="no-popup"><img src="/web/bundles/netrunnerdbcards/images/cards/en/{{ item['identity'].code }}.png" class="img-responsive"></a>
+<a href="{{ path('cards_zoom',{card_code:item['identity'].code}) }}" class="no-popup"><img src="/web/bundles/cards/{{ item['identity'].code }}.png" class="img-responsive"></a>
 </div>
 <div class="col-md-9">
 <table class="table table-condensed">
