--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ pagetitle|default('Deckbuilder') }} &middot; AGoT2db</title>
+    <title>{{ pagetitle|default('Deckbuilder') }} &middot; agot2db</title>
     <link rel="icon" sizes="16x16" href="/favicon.png" />
     <link rel="icon" sizes="196x196" href="/icon.png" />
     <link rel="apple-touch-icon" sizes="129x129" href="/apple-touch-icon.png" />
@@ -35,7 +35,7 @@
           <a class="navbar-brand" href="{{ path('index') }}">
             <span class="icon icon-link-half-top"></span>
             <span class="icon icon-link-half-bottom"></span>
-            AGoT2db
+            agot2db
           </a>
         </div>
         <div class="navbar-collapse collapse">
