--- a/src/AppBundle/Resources/views/Default/profile.html.twig
+++ b/src/AppBundle/Resources/views/Default/profile.html.twig
@@ -6,7 +6,7 @@
 
 <div class="jumbotron background-{{ user.faction }}-10">
   <h1><span class="{{ user.faction }}">{{ user.username }}</span>
-  {% if user.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="AGoT2db Gracious Donator"></span>{% endif %}
+  {% if user.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
     <small>{{ user.reputation }}</small></h1>
 	<p>
         Member since {{ user.creation|date('Y-m-d') }}.
