--- a/src/AppBundle/Resources/views/Default/recent_decklists.html.twig
+++ b/src/AppBundle/Resources/views/Default/recent_decklists.html.twig
@@ -3,7 +3,7 @@
 	{% for decklist in decklists %}
 	<tr>
 	<td>
-		<img src="/web/bundles/netrunnerdbcards/images/cards/en/{{ decklist.code }}.png" alt="{{ decklist.identity }}" style="width:52px">
+		<img src="/web/bundles/cards/{{ decklist.code }}.png" alt="{{ decklist.identity }}" style="width:52px">
 	</td>
 	<td class="decklists">
 	<div>
@@ -14,7 +14,7 @@
 	</div>
 	<div class="username small">
 		<a href="{{ path('user_profile_view', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
-		{% if decklist.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="AGoT2db Gracious Donator"></span>{% endif %}
+		{% if decklist.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="agot2db Gracious Donator"></span>{% endif %}
 		<small class="reputation">{{ decklist.reputation }}</small>
 	</div>
 	<div class="small social">
