--- a/src/AppBundle/Resources/views/Search/card-faction.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-faction.html.twig
@@ -1,3 +1,3 @@
 {{ card.faction_name }}</span>.
-{% if card.is_loyal %} Loyal.{% endif %}
-{% if card.is_limited %} Limited.{% endif %}
+{% if card.isLoyal %} Loyal.{% endif %}
+{% if card.isLimited %} Limited.{% endif %}
